--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Alice S. Ren # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Alice is a physical oceanographer. She plans to obtain her PhD from Scripps Institution of Oceanography, UCSD in 2022. She works with data from autonomous platforms to observe large-scale phenomena in the ocean.
   <br><br>
   Second description 
   <br><br>
