--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Alice S. Ren # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Alice is a physical oceanographer. She plans to obtain her PhD from Scripps Institution of Oceanography, UCSD in 2022. She works with data from autonomous platforms to observe large-scale phenomena in the ocean.
+  Alice is a physical oceanographer. She works with data from autonomous platforms to observe large-scale phenomena in the ocean.
   <br><br>
-  Second description 
+  She plans to obtain her PhD from Scripps Institution of Oceanography, UCSD in 2022. 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
