--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alice S. Ren # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/ren_alice-7_0.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Alice is a physical oceanographer. She works with data from autonomous platforms to observe large-scale phenomena in the ocean.
   <br><br>
