--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ logo: "/images/ren_alice-7_0.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Alice is a physical oceanographer. She works with data from autonomous platforms to observe large-scale phenomena in the ocean.
   <br><br>
+  Current Bio and Contact: https://scripps.ucsd.edu/profiles/aren
   <br><br>
   <br><br>
   
