--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/ren_alice-7_0.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Alice is a physical oceanographer. She works with data from autonomous vehicles to observe ocean dynamics.
   <br><br>
-  <a href="https://scripps.ucsd.edu/profiles/aren">Current Bio and Contact</a>
+  <a href="https://www.whoi.edu/profile/alice.ren/">Current Bio and Contact</a>
   <br><br>
   <br><br>
   
