--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.whoi.edu/profile/alice.ren/">Current Bio and Contact</a>
   <br><br>
+  Dr. Ren is starting as an assistant professor at Arizona State University in Jan. 2026.  Please reach out if you are interested in the graduate program or a postdoc position.  The lab will be based at Bermuda Institute of Ocean Sciences (ASU-BIOS).
   <br><br>
   
 theme: jekyll-theme-minimal
